# cs-match-helper

./: .gitignore  README.md  env.d.ts  package-lock.json  package.json  response.md  response_5e.md  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/skills/git-commit/: SKILL.md
.cursor/skills/git-release/: SKILL.md
docs/: cs-match-helper-api.md  lunaris-api.md  response_5e.md  stop-reflex-reference.md  急停算法参考.md
gamebar-widget/: CSMatchHelperWidget.sln  README.md  build-release.ps1  install-user.ps1  install.ps1  package-release.ps1  sync-widget-icons.ps1  uninstall.ps1
gamebar-widget/CSMatchHelperWidget/: App.xaml  App.xaml.cs  CSMatchHelperWidget.csproj  HudChartRenderer.cs  HudDisplayMetrics.cs  IpcPortDiscovery.cs  Package.appxmanifest  WidgetPage.xaml  WidgetPage.xaml.cs
gamebar-widget/CSMatchHelperWidget/Properties/: AssemblyInfo.cs  Default.rd.xml
html/: index.html  robots.txt
html/assets/: ASSETS.md
html/css/: styles.css
html/js/: main.js
scripts/: ensure-widget-zip.mjs  load-env.mjs  lunaris-upload.mjs  release-status.mjs  release.mjs  seed-5e-fixture.mjs  version.mjs  widget-upload.mjs  widget-version-lib.mjs  widget-version.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: assessment-hud.json  default.json  hud.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-app-devtools.toml  allow-cancel-ai-analysis.toml  allow-check-for-update.toml  allow-close-app.toml  allow-counter-strafing.toml  allow-fetch-5e-match-detail.toml  allow-fetch-5e-player-home.toml  allow-fetch-http-json.toml  allow-fetch-proxied-image.toml  allow-gamebar-widget.toml  allow-get-5e-cdp-status.toml  allow-get-ai-settings-path.toml  allow-get-comment-client-key.toml  allow-get-log-status.toml  allow-launch-5e-with-cdp.toml  allow-load-ai-settings.toml  allow-load-p5e-client-root.toml  allow-match-history.toml  allow-probe-5e-cdp-active.toml  allow-read-latest-log-lines.toml  allow-relaunch-as-admin.toml  allow-save-ai-settings.toml  allow-save-p5e-client-root.toml  allow-set-5e-cdp-gate-debug-mode.toml  allow-set-5e-cdp-ws-debug-mode.toml  allow-start-5e-cdp-collector.toml  allow-start-ai-analysis.toml  allow-start-log-watch.toml  allow-stop-5e-cdp-collector.toml  allow-stop-log-watch.toml
src-tauri/src/: ai.rs  comments.rs  gamebar_shortcut.rs  gamebar_widget.rs  lib.rs  log_watcher.rs  main.rs  match_history.rs  shutdown.rs  update.rs
src-tauri/src/counter_strafing/: assessment_engine.rs  engine.rs  hud_window.rs  ipc_port_discovery.rs  ipc_server.rs  mod.rs  runtime.rs  settings.rs  types.rs  win_input.rs
src-tauri/src/platform/: admin_relaunch.rs  mod.rs  perfect.rs  platform_5e_cdp.rs  platform_5e_gate_sign.rs  platform_5e_launch.rs  platform_5e_match.rs  platform_5e_player_home.rs  platform_5e_sink.rs  platform_5e_ws.rs  platform_board.rs
src/core/: types.ts
src/core/ai/: ai-prompt-schema.ts  baselines.ts  display.test.ts  display.ts  p5e-baselines.ts  p5e-map-supplement.test.ts  p5e-map-supplement.ts  p5e-prompt.test.ts  p5e-prompt.ts  player-notes.ts  pricing.ts  prompt.ts  sanitize-result.test.ts  sanitize-result.ts  stream-parse.ts  types.ts
src/core/comments/: api.test.ts  api.ts  comment-identity.test.ts  comment-identity.ts  edit-policy.test.ts  edit-policy.ts  emoji-groups.ts  format-time.test.ts  format-time.ts  internal-comment.test.ts  internal-comment.ts  pixel-avatar.test.ts  pixel-avatar.ts  steam-id.ts  types.ts
src/core/counter-strafing/: assessmentChartGeometry.test.ts  assessmentChartGeometry.ts  hudDisplay.ts  mergeCounterStrafingSnapshot.ts  native.ts  types.session.test.ts  types.settings.test.ts  types.shot-bar.test.ts  types.ts
src/core/gamebar-widget/: mock-update-check.ts  native.ts  shortcut.ts  types.ts
src/core/log/: format-debug-log.ts  (+1 more)
src/mainview/: App.vue  counter-strafing-assessment-hud.html  counter-strafing-hud.html  index.css  index.html  main.ts  native.ts
(+148 files in other folders)
