[package]
name = "cs-match-helper"
version = "3.1.0"
description = "CS匹配助手 - 对战匹配分析"
authors = ["cs-match-helper"]
edition = "2021"

[lib]
name = "cs_match_helper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
notify = "8.2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking", "system-proxy", "socks"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
crossbeam-channel = "0.5"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"
